Fix a bunch of deprecation warnings